--- a/src/app/components/Home-Content/Lightbox/Lightbox.module.scss
+++ b/src/app/components/Home-Content/Lightbox/Lightbox.module.scss
@@ -77,10 +77,16 @@
   @media (max-width: 999px) and (min-width: 750px) {
     max-width: 80vw;
   }
-  @media (max-width: 749px){
+  @media (max-width: 749px) and (min-width: 480px)
+  {
     width: 70vw;
     transform: translateY(60px);
     //padding: 0px 18px 10px 18px;
+  }
+  @media (max-width: 479px) {
+    width: 70vw;
+    transform: translateY(60px);
+    padding-right: 2px;
   }
 
 }
@@ -105,7 +111,6 @@
   position: relative;
   border: 0.1px solid rgb(var(--foreground-rgb), 0.6);
   // background-color: rgb(16, 57, 58);
-  margin-bottom: 1em;
   margin: 0 2px 1em 2px;
   break-inside: avoid;
   // width: clamp(42.5ch, 30%, 75ch);
@@ -138,7 +143,12 @@
 
 .closeButton {
   position: absolute;
-  top: -6px;
-  right: -6px;
-  padding: 1px;
+    top: 1px;
+    right: 1px;
+    padding: 1px;
+
+  @media (max-width: 479px) {
+    //top: -5px;
+    right: 2px;
+  }
 }
